force-app/main/default/objects/RD_RoutingTranslation__c/RD_RoutingTranslation__c.object-meta.xml
<CustomObject>
    <label>RD RoutingTranslation</label>
    <nameField>
        <label>RD RoutingTranslation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD RoutingTranslation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>