force-app/main/default/objects/RD_RoutingTranslation__c/fields/Num2__c.field-meta.xml
<CustomField>
    <fullName>Num2__c</fullName>
    <label>Num2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>