force-app/main/default/objects/RD_RoutingTranslation__c/fields/Num4__c.field-meta.xml
<CustomField>
    <fullName>Num4__c</fullName>
    <label>Num4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>