force-app/main/default/objects/RD_RoutingTranslation__c/fields/NumOpp2__c.field-meta.xml
<CustomField>
    <fullName>NumOpp2__c</fullName>
    <label>NumOpp2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>